Resolvido bugs no sistema de exemplo
git-svn-id: http://vortice.googlecode.com/svn/trunk@52 e741a136-ebac-11dd-b2d9-215335d0b316

--- a/app/i18n/jp.conf
+++ b/app/i18n/jp.conf
@@ -1,7 +1,7 @@
 Exemplo de Sistema
 システムの例
 
-Página inicial
+Página Inicial
 家
 
 Adicionar novo Item
@@ -69,3 +69,6 @@ Alterar Item
 
 Item excluido com sucesso!
 アイテムが正常に削除された！
+
+Itens
+商品
