--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,6 @@
-RewriteEngine On
 Options +FollowSymlinks
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . index.php [L]
+<IfModule mod_rewrite.c>
+	RewriteEngine On 
+	RewriteRule ^$ app/webroot/ [L]
+	RewriteRule (.*) app/webroot/$1 [L]
+</IfModule>
