Unstable 0.3 first commit

--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
-Options +FollowSymlinks
 <IfModule mod_rewrite.c>
-	RewriteEngine On 
-	RewriteRule ^$ app/webroot/ [L]
-	RewriteRule (.*) app/webroot/$1 [L]
+    RewriteEngine On
+    #RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteRule ^(.*)$ core/handler.php [QSA,L]
 </IfModule>
